<resources>
    <string name="app_name">Calculator</string>
    <string name="one"> 1 </string>
    <string name="two"> 2 </string>
    <string name="three"> 3 </string>
    <string name="four"> 4 </string>
    <string name="five"> 5 </string>
    <string name="six"> 6 </string>
    <string name="seven"> 7 </string>
    <string name="eight"> 8 </string>
    <string name="nine"> 9 </string>
    <string name="zero">O</string>
    <string name="Addition">+</string>
    <string name="Subtract"> - </string>
    <string name="Product">X</string>
    <string name="Division">/</string>
    <string name="Modulo">%</string>
    <string name="EqualTo">=</string>
    <string name="clear">Clear</string>
    <string name="Backspace">Backspace</string>

</resources>